...
        button.setTitleColor(.imageFeedBlack, for: .normal)
        button.backgroundColor = .imageFeedWhite
        button.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
        button.layer.cornerRadius = 16
        button.layer.masksToBounds = true
        button.addTarget(self, action: #selector(touchUpInsideAuthButton), for: .touchUpInside)
        button.accessibilityIdentifier = "Authenticate"
        return button
    }()
    
    weak var delegate: AuthViewControllerDelegate?
    
    // MARK: - Lifecycle
...
