...
        return imageView
    }()
    private lazy var likeButton: UIButton = {
        let button = UIButton(type: .custom)
        button.setImage(UIImage(named: "FavoritesActive"), for: .normal)
        button.addTarget(self, action: #selector(touchUpInsidelikeButton), for: .touchUpInside)
        button.accessibilityIdentifier = "LikeButton"
        return button
    }()
    private var dateLabel: UILabel = {
        let label = UILabel()
        label.text = "6 января 2024"
        label.textColor = .imageFeedWhite
...
