import XCTest

final class ImageFeedUITests: XCTestCase {
    private let app: XCUIApplication = {
        let app = XCUIApplication()
        app.launchArguments = ["testMode"]
        return app
    }()
    
    override func setUpWithError() throws {
        try super.setUpWithError()
        continueAfterFailure = false
        app.launch()
        
    }
    
    func testAuth() throws {
        app.buttons["Authenticate"].tap()
        sleep(3)
        
        let webView = app.webViews["UnsplashWebView"]
        XCTAssertTrue(webView.waitForExistence(timeout: 5))
        
        let passwordTextField = webView.descendants(matching: .secureTextField).element
        XCTAssertTrue(passwordTextField.waitForExistence(timeout: 5))
        passwordTextField.tap()
        passwordTextField.typeText("")
        webView.swipeUp()
        
        sleep(3)
        
        let loginTextField = webView.descendants(matching: .textField).element
        XCTAssertTrue(loginTextField.waitForExistence(timeout: 5))
        loginTextField.tap()
        loginTextField.typeText("")
        webView.swipeUp()
        
        sleep(3)
        
        webView.buttons["Login"].tap()
        
        let tablesQuery = app.tables
        let cell = tablesQuery.children(matching: .cell).element(boundBy: 0)
        
        XCTAssertTrue(cell.waitForExistence(timeout: 5))
        
        sleep(3)
    }
    
     func testFeed() throws {
        let tablesQuery = app.tables
        let cell = tablesQuery.descendants(matching: .cell).element(boundBy: 0)
        sleep(3)
        let cellToLike = tablesQuery.descendants(matching: .cell).element(boundBy: 1)
        let likeButton = cellToLike.buttons["LikeButton"]
        likeButton.tap()
        sleep(3)
        likeButton.tap()
        sleep(3)
        
        cellToLike.tap()
        
        sleep(3)
        
        let image = app.scrollViews.images.element(boundBy: 0)
        image.pinch(withScale: 3, velocity: 1)
        image.pinch(withScale: 0.5, velocity: -1)
        
        let backButton = app.buttons["SingleImageBackButton"]
        backButton.tap()
        
        sleep(3)
    }
    
     func testProfile() throws {
        app.tabBars.buttons.element(boundBy: 1).tap()
        
        XCTAssertTrue(app.staticTexts["ProfileNameLabel"].exists)
        XCTAssertTrue(app.staticTexts["ProfileLoginLabel"].exists)
        
        app.buttons["ProfileExitButton"].tap()
        
        app.alerts["ApplicationAlert"].scrollViews.otherElements.buttons["Да"].tap()
        sleep(3)

        XCTAssertTrue(app.buttons["Authenticate"].exists)
    }
}
